j--/tests/pass/Subtraction.java
package pass;

public class Subtraction {
    public int subtract(int a, int b) {
        return a - b;
    }
    public int subtract_assign(int a, int b) {
        a -= b;
        return a;
    }
}
