j--/tests/fail/DivAssign.java
package fail;

public class DivAssign {
    public static void main(String[] args) {
        int a = 10;
        a /= 'a';
        System.out.println(a);
    }
}
